# copernicus_helper

./: README.md  copernicus.py  pyproject.toml
src/copernicus_helper/: copernicus.py
